# InsForge

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_FLOWS.md  CHANGELOG.md  CLAUDE_PLUGIN.md  CONTRIBUTING.md  Dockerfile  Dockerfile.deno  FINDINGS_SUMMARY.md  HACKTOBERFEST.md  IMPLEMENTATION_SUMMARY.md  PULL_REQUEST_OPPORTUNITIES.md  README.ja.md  README.md  SECURITY.md  TESTING_SUMMARY.md  docker-compose.coolify.yml  docker-compose.dokploy.yml  docker-compose.minio.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.rustfs.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pr_body.md  resolve.js  test-google-id-token.html  test-wildcard-route.cjs  tsconfig.json  turbo.json
.bunnyshell/: bunnyshell.yaml
.claude-plugin/: marketplace.json
.design-sync/: NOTES.md  config.json  conventions.md  gen-preview-css.mjs  preview-tailwind.config.cjs
.playwright-mcp/: page-2026-07-16T01-28-54-612Z.yml  page-2026-07-16T01-30-08-529Z.yml
auth/: README.md  index.html  package.json  vite.config.ts  vitest.config.ts
backend/: package.json  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.integration.config.ts
claude-plugin/: claude-plugin
deploy/: Dockerfile.deno  Dockerfile.postgres  docker-deploy.md
docs/: .vale.ini  README.md  _audit-2026-04-18.md  _clarity-audit-2026-04-18.md  alternatives.mdx  asset-guidelines.md  changelog.mdx  cli-telemetry.md  comparison.mdx  config-as-code.mdx  dashboard-package-rfc.md  docs.json  faq.mdx  insforge-auth-api.md  insforge-instructions-sdk.md  insforge-project-sdk.md  insforge-project.md  introduction.mdx  mcp-installation.mdx  mcp-setup.mdx  oauth-server.mdx  partnership.mdx  pgbouncer-connection-pooler.md  pricing.mdx  products.mdx  quickstart.mdx  realtime-implementation-plan.md  realtime-role-sql-injection-fix.md  referral-program.mdx  showcase.mdx  smtp-setup.md  vps-deployment.md
examples/: presence-demo.html  response-examples.md
frontend/: .env.example  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
functions/: server.ts  worker-template.js
i18n/: README.ar.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.pt-BR.md  README.ru.md
manual-tests/: test-deployment-api.sh  test-deployment-edge-cases.sh
openapi/: advisor.yaml  ai.yaml  auth.yaml  deployments.yaml  email.yaml  functions.yaml  logs.yaml  marketplace.yaml  metadata.yaml  payments.yaml  policies.yaml  realtime.yaml  schedules.yaml  secrets.yaml  storage.yaml  tables.yaml
scripts/: build-docs-langs.py  check-docs-i18n-parity.sh  db-reset.mjs  db-reset.sh  docs-langs-labels.json  start-local.ps1
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/insforge/: __init__.py  ai.py  auth.py  client.py  database.py  errors.py  functions.py  http.py  realtime.py  storage.py
sdks/python/insforge/lib/: __init__.py  http_client.py
sdks/python/insforge/modules/: __init__.py  ai.py  auth.py  database.py  email.py  functions.py  realtime.py  storage.py
sdks/python/tests/: test_auth.py  test_database.py  test_sdk.py  test_storage.py
(+1896 files in other folders)
