[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insforge"
version = "1.0.0"
description = "Official Python SDK for InsForge - Backend-as-a-Service platform"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "InsForge", email = "support@insforge.com" }]
keywords = ["insforge", "baas", "backend", "sdk", "database", "auth", "storage", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
realtime = ["python-socketio[client]>=5.0"]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "responses>=0.23",
    "black",
    "ruff",
    "mypy",
    "types-requests",
]

[project.urls]
Homepage = "https://insforge.com"
Documentation = "https://insforge.com/docs/sdks/python"
Repository = "https://github.com/InsForge/InsForge"
"Bug Tracker" = "https://github.com/InsForge/InsForge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["insforge*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
